# jenkins_mlops

./: Jenkinsfile  docker-compose.yml  requirements.txt
mlops-pipeline/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  set_up.bat
mlops-pipeline/.github/workflows/: sonar.yml
mlops-pipeline/src/: cargar_datos.py  config.json  feature_engineering.py  heuristic_model.py  model_deploy.py  model_evaluation.py  model_monitoring.py  model_training.py
pyops/: validate.py
pyops/checks/: filesystem_checks.py  secret_scanner.py
pyops/reports/: junit.py
